Fixed contact section mobile styling

--- a/public/main.css
+++ b/public/main.css
@@ -311,7 +311,7 @@ h2{
 
 	#contactSection{
 		height: 92vh;
-		padding: 5em 2.5em;
+		padding: 5em 2em;
 		text-align: center;
 		padding-bottom: 200px;
 	}
